# WritingTheTabulaRasa

./: 404.html  README.md  dev_build.sh  index.html  mkdocs.yml  sitemap.xml
server/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  functional_tests.py  lite_functional_tests.py  pyproject.toml  requirements.txt
server/api/: README.md  urls.py  views.py
server/applications/: README.md
server/applications/cheatsheets/: admin.py  api_urls.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/applications/courses/: admin.py  api_urls.py  models.py  serializers.py  views.py
server/applications/encyclopedia/: admin.py  api_urls.py  apps.py  models.py  serializers.py  views.py
server/applications/essays/: api_urls.py  apps.py  models.py  serializers.py  views.py
server/applications/guides/: admin.py  api_urls.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/applications/images/: admin.py  api_urls.py  apps.py  models.py  serializers.py  views.py
server/applications/lectures/: admin.py  api_urls.py  apps.py  models.py  serializers.py  views.py
server/applications/metadata/: admin.py  api_urls.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/config/: README.md  dbfields_defaults.py  fields_default_values.py  permissions.py  settings.py  urls.py
server/lite/: tests.py  urls.py  views.py
server/staticfiles/: style.css
server/user/: README.md  admin.py  api_urls.py  models.py  serializers.py  tests.py  urls.py  views.py
server/webapp/: README.md  urls.py  views.py
(+496 files in other folders)
